TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
  .todos {
    margin: 40px;
    } 
 

mat-grid-tile {
    display:flex;
    padding:0;
    width: 100%;
    height: 100%;
}


.grid-container {
    grid-row-gap: 50px;
    width: 100%;
    height: 100%;
  }

h2.centered-title {
    text-align: center;
}

h4.centered-title {
    text-align: center;
}
button.btn-behaviour{
  text-align: left;
}

button.btn-centrado{
    justify-content: center;
    left: 40%;
}

p.textoError {
    color: red;
    background: white;
}

.mat-icon {
    display:inline-block;
}


.tituloCard {
    font-size: 28px;
    color: \$text_color;
    margin-bottom: 0px;
    padding: 3rem 1rem 2rem 0rem !important;
    background-color: #1a0d1e;
    text-align: center;
    overflow: visible !important;
    
  }

  .mat-grid-tile  {
    background-color:#2c1435
  }

  .file-select {
    position: relative;
    display: inline-block;
  }

  .file-select::before {
    background-color: #5678EF;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 3px;
    content: 'Seleccionar'; /* testo por defecto */
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
  }

  .file-select input[type="file"] {
    opacity: 0;
    width: 200px;
    height: 32px;
  }

  .mat-tab-group {
    width: 100%;
  }

  .chips-div {
    align-items: center;
    display: flex;
    justify-content: center;
}

.legend {
  border-collapse: collapse;
  width: 200px;
  margin: 20px;
}

.color-cell {
  width: 20px;
  height: 20px;
}

.red {
  background-color: red;
}

.green {
  background-color: green;
}

.yellow {
  background-color:yellow;
}

.label-cell {
  padding-left: 10px;
}

